test/neg/sets01.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((m1 (Set Int))) (=> (= m1 {}) (in 100 m1))))
(constraint (forall ((m2 (Set Int))(m1 (Set Int))) (=> (and (= m1 {}) (= m2 (union (union m1 (Set 10)) (Set 20)))) (not (in 100 m2)))))
(constraint (forall ((m2 (Set Int))(m1 (Set Int))) (=> (and (= m1 {}) (= m2 (union (union m1 (Set 10)) (Set 20)))) (in 10 m2))))
(constraint (forall ((m3 (Set Int))(m2 (Set Int))(m1 (Set Int))) (=> (and (= m1 {}) (and (= m2 (union (union m1 (Set 10)) (Set 20))) (= m3 (union (union m1 (Set 20)) (Set 10))))) (= m2 m3))))
(constraint (forall ((m5 (Set Int))(m4 (Set Int))(m3 (Set Int))(m2 (Set Int))(m1 (Set Int))) (=> (and (= m1 {}) (and (= m2 (union (union m1 (Set 10)) (Set 20))) (and (= m3 (union (union m1 (Set 20)) (Set 10))) (and (= m4 (union m1 (Set 10))) (= m5 (union m1 (Set 20))))))) (= m2 (union m4 m5)))))

